Almost finished the call gathering, encoding and conversion to evidence